# finance-lending-game

./: .gitignore  README.md  pyproject.toml  requirements.txt
constants/: constants.py  paths.py
models/: LightGBM.pkl  XGBoost.pkl  hist_gradient_boosting.pkl  preprocessor.pkl  random_forest.pkl
notebooks/: EXAMPLE_model.ipynb  PLTR.ipynb  check_results.ipynb  compare_models.ipynb  eda.ipynb  hist_gradient_boosting.ipynb  light_gbm.ipynb  logistic_regression.ipynb  model_example.ipynb  predict_rates.ipynb  prepare_round_2_training_data.ipynb  random_forest.ipynb  round_1_res.ipynb  xgboost.ipynb
output/: metrics.csv  submission.ipynb  submission_round_1.csv  y_pred_proba_PLTR.csv
src/: market_sim.py  preprocessing.py  strategies.py
src/utils/: calibration.py  compute_metrics.py  confusion_matrix.py  cumulative_probability.py  format_loans.py  load_data.py  model_utils.py  plot_roc.py  save_model.py
